# newby

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
new/: __init__.py  __main__.py  logging_config.ini  new.py
new/loggers/: __init__.py
new/storage/: __init__.py  storage.py
new/utilities/: __init__.py  retrieve.py
