[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "new_janithpet"
version = "0.0.1"
authors = [{ name = "Janith Petangoda", email = "jpetangoda@gmail.com" }]
description = "A tool for creating template projects."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/janithpet/new"
Issues = "https://github.com/pypa/janithpet/new/issues"

[tool.isort]
profile = "google"
src_paths = ["new"]
skip = ["__init__.py"]

[tool.mypy]
strict = true
allow_redefinition = true
